增加一个 download 按钮可以多次点击下载

--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <div style="width: 100px; padding: 15px;">(*ﾟｰﾟ*)</div>
+        <div><button id="download">Download</button></div>
         <script src='popup.js'></script>
     </body>
 </html>
